--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Base application setup for creating a new react project.",
   "main": "server/index.js",
   "scripts": {
-    "build": "npm run less && webpack -w --mode development",
-    "start": "node server/index.js",
+    "build": "webpack --mode development",
+    "start": "npm run build && node server/index.js",
     "less": "lessc src/css/style.less dist/css/style.css",
     "lint": "eslint .",
     "test": "npm run build && mocha test/.setup.js test/*.spec.js --exit"
   },
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.19.0",
     "babel": "^6.3.26",
     "babel-loader": "^7.1.1",
     "babel-preset-airbnb": "^1.0.1",
@@ -20,21 +20,23 @@
     "babel-register": "^6.4.3",
     "bluebird": "^3.5.0",
     "chai": "^3.5.0",
+    "dotenv": "^8.0.0",
     "express": "^4.15.3",
     "json-loader": "^0.5.4",
-    "lodash": "^4.15.0",
+    "lodash": "^4.17.11",
     "lodash-webpack-plugin": "^0.10.2",
-    "morgan": "^1.8.1",
-    "nightmare": "^3.0.1",
+    "morgan": "^1.9.1",
+    "nightmare": "^3.0.2",
     "prop-types": "^15.5.10",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-devtools": "^3.4.0",
+    "redux-devtools": "^3.5.0",
+    "redux-promise-middleware": "^6.1.1",
     "serve-favicon": "^2.0.1",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.6.1",
